--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.75.0",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
